2004-02-01  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/file-server.c: 
	* src/pconfig.c (set_file): 
	* src/log-common.c:
	big sanitization of the API.
	
	* plugins/simple/simple.c (parse_ruleset_directive): 
	if an inclusion file, do not ignore other file.
	
2004-02-01  Yoann Vandoorselaere  <yoann@prelude-ids.org>
		
	* src/udp-server.c (udp_server_process_event): 
	use log_file_set_source().
	(udp_server_process_event): remove trailling syslog
	priority / facility '>' character.

	* src/log-common.c (log_file_set_source): 
	implemented. Doesn't check wether the file exist.
	free previous value if already set.
	
	(log_file_set_filename): free filename if it already
	exist.

	* src/udp-server.c (udp_server_new): verbose message
	when the syslog server is enabled.
	
	(udp_server_process_event, udp_server_new): embed
	a log_file_t within udp_server_t. Set the filename
	to be the source of the syslog message. Avoid a crash
	due to the recent log file handling change.

2004-01-31  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/ruleset/simple.rules (regex): 
	use the same classification for user authentication
	(succeeded/failed). 

2004-01-23  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/simple/simple.c:	
	(simple_run): remove latest "pass" addition, cleanup the
	code and allow use of the "last" attribute with regex 
	that doesn't generate an alert. Keep the pass_rules_first
	option throught.

2004-01-23  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	(set_pass_first): 
	(parse_rule_pass): implemented.
	(parse_rule_keyword): hook pass keyword.
	(simple_run): stop walking rule in case we meet a "pass" rule.

	(plugin_init): new option to process pas rule first, 
	if the user want to. Make this option get higher priority than
	the ruleset specification option.
	
	(parse_ruleset_directive): if the "pass rules" first option was
	specified, add pass rules at the begining of the list.
